// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`[SNAPSHOT][Componentes][Common][Button] - Boton con los siguientes temas: red, secondaryRed, flatRed, blue, flatBlue, green, flatGreen, yellow, flatYellow, gray, flatGray. Debe pintar el componente con el tema "blue" y los tamaños "small", "medium" y "big". 1`] = `
.c0 {
  background-color: #1476FB;
  border: 1px solid #1476FB;
  border-radius: 5px;
  box-sizing: border-box;
  color: #FFF;
  cursor: pointer;
  display: inline-block;
  font-size: 14px;
  font-family: "Open Sans",sans-serif;
  font-stretch: normal;
  font-style: normal;
  font-weight: bold;
  height: 30px;
  -webkit-letter-spacing: normal;
  -moz-letter-spacing: normal;
  -ms-letter-spacing: normal;
  letter-spacing: normal;
  padding: 5px 30px;
  text-align: center;
  width: auto;
  -webkit-transition: all .3s;
  transition: all .3s;
}

.c0:hover {
  background-color: #0960D3;
  border: 1px solid #0960D3;
  color: #FFF;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c0:hover .sc-bwzfXH {
  fill: #FFF;
}

.c0:disabled {
  background-color: #BFBFBF;
  border: 1px solid #BFBFBF;
  color: #FFF;
  pointer-events: none;
}

.c0:disabled .sc-bwzfXH {
  fill: #FFF;
}

.c0:focus {
  outline: none;
}

.c0 .sc-bwzfXH {
  fill: #FFF;
  height: 20px;
  width: 20px;
}

<button
  className="c0"
  size="small"
  theme="blue"
/>
`;

exports[`[SNAPSHOT][Componentes][Common][Button] - Boton con los siguientes temas: red, secondaryRed, flatRed, blue, flatBlue, green, flatGreen, yellow, flatYellow, gray, flatGray. Debe pintar el componente con el tema "blue" y los tamaños "small", "medium" y "big". 2`] = `
.c0 {
  background-color: #1476FB;
  border: 1px solid #1476FB;
  border-radius: 5px;
  box-sizing: border-box;
  color: #FFF;
  cursor: pointer;
  display: inline-block;
  font-size: 16px;
  font-family: "Open Sans",sans-serif;
  font-stretch: normal;
  font-style: normal;
  font-weight: bold;
  height: 40px;
  -webkit-letter-spacing: normal;
  -moz-letter-spacing: normal;
  -ms-letter-spacing: normal;
  letter-spacing: normal;
  padding: 5px 30px;
  text-align: center;
  width: auto;
  -webkit-transition: all .3s;
  transition: all .3s;
}

.c0:hover {
  background-color: #0960D3;
  border: 1px solid #0960D3;
  color: #FFF;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c0:hover .sc-bwzfXH {
  fill: #FFF;
}

.c0:disabled {
  background-color: #BFBFBF;
  border: 1px solid #BFBFBF;
  color: #FFF;
  pointer-events: none;
}

.c0:disabled .sc-bwzfXH {
  fill: #FFF;
}

.c0:focus {
  outline: none;
}

.c0 .sc-bwzfXH {
  fill: #FFF;
  height: 30px;
  width: 30px;
}

<button
  className="c0"
  size="medium"
  theme="blue"
/>
`;

exports[`[SNAPSHOT][Componentes][Common][Button] - Boton con los siguientes temas: red, secondaryRed, flatRed, blue, flatBlue, green, flatGreen, yellow, flatYellow, gray, flatGray. Debe pintar el componente con el tema "blue" y los tamaños "small", "medium" y "big". 3`] = `
.c0 {
  background-color: #1476FB;
  border: 1px solid #1476FB;
  border-radius: 5px;
  box-sizing: border-box;
  color: #FFF;
  cursor: pointer;
  display: inline-block;
  font-size: 18px;
  font-family: "Open Sans",sans-serif;
  font-stretch: normal;
  font-style: normal;
  font-weight: bold;
  height: 46px;
  -webkit-letter-spacing: normal;
  -moz-letter-spacing: normal;
  -ms-letter-spacing: normal;
  letter-spacing: normal;
  padding: 5px 30px;
  text-align: center;
  width: auto;
  -webkit-transition: all .3s;
  transition: all .3s;
}

.c0:hover {
  background-color: #0960D3;
  border: 1px solid #0960D3;
  color: #FFF;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c0:hover .sc-bwzfXH {
  fill: #FFF;
}

.c0:disabled {
  background-color: #BFBFBF;
  border: 1px solid #BFBFBF;
  color: #FFF;
  pointer-events: none;
}

.c0:disabled .sc-bwzfXH {
  fill: #FFF;
}

.c0:focus {
  outline: none;
}

.c0 .sc-bwzfXH {
  fill: #FFF;
  height: 36px;
  width: 36px;
}

<button
  className="c0"
  size="big"
  theme="blue"
/>
`;

exports[`[SNAPSHOT][Componentes][Common][Button] - Boton con los siguientes temas: red, secondaryRed, flatRed, blue, flatBlue, green, flatGreen, yellow, flatYellow, gray, flatGray. Debe pintar el componente con el tema "flatBlue" y los tamaños "small", "medium" y "big". 1`] = `
.c0 {
  background-color: transparent;
  border: 1px solid transparent;
  border-radius: 5px;
  box-sizing: border-box;
  color: #1476FB;
  cursor: pointer;
  display: inline-block;
  font-size: 14px;
  font-family: "Open Sans",sans-serif;
  font-stretch: normal;
  font-style: normal;
  font-weight: bold;
  height: 30px;
  -webkit-letter-spacing: normal;
  -moz-letter-spacing: normal;
  -ms-letter-spacing: normal;
  letter-spacing: normal;
  padding: 5px 30px;
  text-align: center;
  width: auto;
  -webkit-transition: all .3s;
  transition: all .3s;
}

.c0:hover {
  background-color: #EBEBEB;
  border: 1px solid #EBEBEB;
  color: #1476FB;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c0:hover .sc-bwzfXH {
  fill: #1476FB;
}

.c0:disabled {
  background-color: transparent;
  border: 1px solid transparent;
  color: #BFBFBF;
  pointer-events: none;
}

.c0:disabled .sc-bwzfXH {
  fill: #BFBFBF;
}

.c0:focus {
  outline: none;
}

.c0 .sc-bwzfXH {
  fill: #1476FB;
  height: 20px;
  width: 20px;
}

<button
  className="c0"
  size="small"
  theme="flatBlue"
/>
`;

exports[`[SNAPSHOT][Componentes][Common][Button] - Boton con los siguientes temas: red, secondaryRed, flatRed, blue, flatBlue, green, flatGreen, yellow, flatYellow, gray, flatGray. Debe pintar el componente con el tema "flatBlue" y los tamaños "small", "medium" y "big". 2`] = `
.c0 {
  background-color: transparent;
  border: 1px solid transparent;
  border-radius: 5px;
  box-sizing: border-box;
  color: #1476FB;
  cursor: pointer;
  display: inline-block;
  font-size: 16px;
  font-family: "Open Sans",sans-serif;
  font-stretch: normal;
  font-style: normal;
  font-weight: bold;
  height: 40px;
  -webkit-letter-spacing: normal;
  -moz-letter-spacing: normal;
  -ms-letter-spacing: normal;
  letter-spacing: normal;
  padding: 5px 30px;
  text-align: center;
  width: auto;
  -webkit-transition: all .3s;
  transition: all .3s;
}

.c0:hover {
  background-color: #EBEBEB;
  border: 1px solid #EBEBEB;
  color: #1476FB;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c0:hover .sc-bwzfXH {
  fill: #1476FB;
}

.c0:disabled {
  background-color: transparent;
  border: 1px solid transparent;
  color: #BFBFBF;
  pointer-events: none;
}

.c0:disabled .sc-bwzfXH {
  fill: #BFBFBF;
}

.c0:focus {
  outline: none;
}

.c0 .sc-bwzfXH {
  fill: #1476FB;
  height: 30px;
  width: 30px;
}

<button
  className="c0"
  size="medium"
  theme="flatBlue"
/>
`;

exports[`[SNAPSHOT][Componentes][Common][Button] - Boton con los siguientes temas: red, secondaryRed, flatRed, blue, flatBlue, green, flatGreen, yellow, flatYellow, gray, flatGray. Debe pintar el componente con el tema "flatBlue" y los tamaños "small", "medium" y "big". 3`] = `
.c0 {
  background-color: transparent;
  border: 1px solid transparent;
  border-radius: 5px;
  box-sizing: border-box;
  color: #1476FB;
  cursor: pointer;
  display: inline-block;
  font-size: 18px;
  font-family: "Open Sans",sans-serif;
  font-stretch: normal;
  font-style: normal;
  font-weight: bold;
  height: 46px;
  -webkit-letter-spacing: normal;
  -moz-letter-spacing: normal;
  -ms-letter-spacing: normal;
  letter-spacing: normal;
  padding: 5px 30px;
  text-align: center;
  width: auto;
  -webkit-transition: all .3s;
  transition: all .3s;
}

.c0:hover {
  background-color: #EBEBEB;
  border: 1px solid #EBEBEB;
  color: #1476FB;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c0:hover .sc-bwzfXH {
  fill: #1476FB;
}

.c0:disabled {
  background-color: transparent;
  border: 1px solid transparent;
  color: #BFBFBF;
  pointer-events: none;
}

.c0:disabled .sc-bwzfXH {
  fill: #BFBFBF;
}

.c0:focus {
  outline: none;
}

.c0 .sc-bwzfXH {
  fill: #1476FB;
  height: 36px;
  width: 36px;
}

<button
  className="c0"
  size="big"
  theme="flatBlue"
/>
`;

exports[`[SNAPSHOT][Componentes][Common][Button] - Boton con los siguientes temas: red, secondaryRed, flatRed, blue, flatBlue, green, flatGreen, yellow, flatYellow, gray, flatGray. Debe pintar el componente con el tema "flatGray" y los tamaños "small", "medium" y "big". 1`] = `
.c0 {
  background-color: transparent;
  border: 1px solid transparent;
  border-radius: 5px;
  box-sizing: border-box;
  color: #858585;
  cursor: pointer;
  display: inline-block;
  font-size: 14px;
  font-family: "Open Sans",sans-serif;
  font-stretch: normal;
  font-style: normal;
  font-weight: bold;
  height: 30px;
  -webkit-letter-spacing: normal;
  -moz-letter-spacing: normal;
  -ms-letter-spacing: normal;
  letter-spacing: normal;
  padding: 5px 30px;
  text-align: center;
  width: auto;
  -webkit-transition: all .3s;
  transition: all .3s;
}

.c0:hover {
  background-color: #EBEBEB;
  border: 1px solid #EBEBEB;
  color: #858585;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c0:hover .sc-bwzfXH {
  fill: #858585;
}

.c0:disabled {
  background-color: transparent;
  border: 1px solid transparent;
  color: #BFBFBF;
  pointer-events: none;
}

.c0:disabled .sc-bwzfXH {
  fill: #BFBFBF;
}

.c0:focus {
  outline: none;
}

.c0 .sc-bwzfXH {
  fill: #858585;
  height: 20px;
  width: 20px;
}

<button
  className="c0"
  size="small"
  theme="flatGray"
/>
`;

exports[`[SNAPSHOT][Componentes][Common][Button] - Boton con los siguientes temas: red, secondaryRed, flatRed, blue, flatBlue, green, flatGreen, yellow, flatYellow, gray, flatGray. Debe pintar el componente con el tema "flatGray" y los tamaños "small", "medium" y "big". 2`] = `
.c0 {
  background-color: transparent;
  border: 1px solid transparent;
  border-radius: 5px;
  box-sizing: border-box;
  color: #858585;
  cursor: pointer;
  display: inline-block;
  font-size: 16px;
  font-family: "Open Sans",sans-serif;
  font-stretch: normal;
  font-style: normal;
  font-weight: bold;
  height: 40px;
  -webkit-letter-spacing: normal;
  -moz-letter-spacing: normal;
  -ms-letter-spacing: normal;
  letter-spacing: normal;
  padding: 5px 30px;
  text-align: center;
  width: auto;
  -webkit-transition: all .3s;
  transition: all .3s;
}

.c0:hover {
  background-color: #EBEBEB;
  border: 1px solid #EBEBEB;
  color: #858585;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c0:hover .sc-bwzfXH {
  fill: #858585;
}

.c0:disabled {
  background-color: transparent;
  border: 1px solid transparent;
  color: #BFBFBF;
  pointer-events: none;
}

.c0:disabled .sc-bwzfXH {
  fill: #BFBFBF;
}

.c0:focus {
  outline: none;
}

.c0 .sc-bwzfXH {
  fill: #858585;
  height: 30px;
  width: 30px;
}

<button
  className="c0"
  size="medium"
  theme="flatGray"
/>
`;

exports[`[SNAPSHOT][Componentes][Common][Button] - Boton con los siguientes temas: red, secondaryRed, flatRed, blue, flatBlue, green, flatGreen, yellow, flatYellow, gray, flatGray. Debe pintar el componente con el tema "flatGray" y los tamaños "small", "medium" y "big". 3`] = `
.c0 {
  background-color: transparent;
  border: 1px solid transparent;
  border-radius: 5px;
  box-sizing: border-box;
  color: #858585;
  cursor: pointer;
  display: inline-block;
  font-size: 18px;
  font-family: "Open Sans",sans-serif;
  font-stretch: normal;
  font-style: normal;
  font-weight: bold;
  height: 46px;
  -webkit-letter-spacing: normal;
  -moz-letter-spacing: normal;
  -ms-letter-spacing: normal;
  letter-spacing: normal;
  padding: 5px 30px;
  text-align: center;
  width: auto;
  -webkit-transition: all .3s;
  transition: all .3s;
}

.c0:hover {
  background-color: #EBEBEB;
  border: 1px solid #EBEBEB;
  color: #858585;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c0:hover .sc-bwzfXH {
  fill: #858585;
}

.c0:disabled {
  background-color: transparent;
  border: 1px solid transparent;
  color: #BFBFBF;
  pointer-events: none;
}

.c0:disabled .sc-bwzfXH {
  fill: #BFBFBF;
}

.c0:focus {
  outline: none;
}

.c0 .sc-bwzfXH {
  fill: #858585;
  height: 36px;
  width: 36px;
}

<button
  className="c0"
  size="big"
  theme="flatGray"
/>
`;

exports[`[SNAPSHOT][Componentes][Common][Button] - Boton con los siguientes temas: red, secondaryRed, flatRed, blue, flatBlue, green, flatGreen, yellow, flatYellow, gray, flatGray. Debe pintar el componente con el tema "flatGreen" y los tamaños "small", "medium" y "big". 1`] = `
.c0 {
  background-color: transparent;
  border: 1px solid transparent;
  border-radius: 5px;
  box-sizing: border-box;
  color: #4CB050;
  cursor: pointer;
  display: inline-block;
  font-size: 14px;
  font-family: "Open Sans",sans-serif;
  font-stretch: normal;
  font-style: normal;
  font-weight: bold;
  height: 30px;
  -webkit-letter-spacing: normal;
  -moz-letter-spacing: normal;
  -ms-letter-spacing: normal;
  letter-spacing: normal;
  padding: 5px 30px;
  text-align: center;
  width: auto;
  -webkit-transition: all .3s;
  transition: all .3s;
}

.c0:hover {
  background-color: #EBEBEB;
  border: 1px solid #EBEBEB;
  color: #4CB050;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c0:hover .sc-bwzfXH {
  fill: #4CB050;
}

.c0:disabled {
  background-color: transparent;
  border: 1px solid transparent;
  color: #BFBFBF;
  pointer-events: none;
}

.c0:disabled .sc-bwzfXH {
  fill: #BFBFBF;
}

.c0:focus {
  outline: none;
}

.c0 .sc-bwzfXH {
  fill: #4CB050;
  height: 20px;
  width: 20px;
}

<button
  className="c0"
  size="small"
  theme="flatGreen"
/>
`;

exports[`[SNAPSHOT][Componentes][Common][Button] - Boton con los siguientes temas: red, secondaryRed, flatRed, blue, flatBlue, green, flatGreen, yellow, flatYellow, gray, flatGray. Debe pintar el componente con el tema "flatGreen" y los tamaños "small", "medium" y "big". 2`] = `
.c0 {
  background-color: transparent;
  border: 1px solid transparent;
  border-radius: 5px;
  box-sizing: border-box;
  color: #4CB050;
  cursor: pointer;
  display: inline-block;
  font-size: 16px;
  font-family: "Open Sans",sans-serif;
  font-stretch: normal;
  font-style: normal;
  font-weight: bold;
  height: 40px;
  -webkit-letter-spacing: normal;
  -moz-letter-spacing: normal;
  -ms-letter-spacing: normal;
  letter-spacing: normal;
  padding: 5px 30px;
  text-align: center;
  width: auto;
  -webkit-transition: all .3s;
  transition: all .3s;
}

.c0:hover {
  background-color: #EBEBEB;
  border: 1px solid #EBEBEB;
  color: #4CB050;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c0:hover .sc-bwzfXH {
  fill: #4CB050;
}

.c0:disabled {
  background-color: transparent;
  border: 1px solid transparent;
  color: #BFBFBF;
  pointer-events: none;
}

.c0:disabled .sc-bwzfXH {
  fill: #BFBFBF;
}

.c0:focus {
  outline: none;
}

.c0 .sc-bwzfXH {
  fill: #4CB050;
  height: 30px;
  width: 30px;
}

<button
  className="c0"
  size="medium"
  theme="flatGreen"
/>
`;

exports[`[SNAPSHOT][Componentes][Common][Button] - Boton con los siguientes temas: red, secondaryRed, flatRed, blue, flatBlue, green, flatGreen, yellow, flatYellow, gray, flatGray. Debe pintar el componente con el tema "flatGreen" y los tamaños "small", "medium" y "big". 3`] = `
.c0 {
  background-color: transparent;
  border: 1px solid transparent;
  border-radius: 5px;
  box-sizing: border-box;
  color: #4CB050;
  cursor: pointer;
  display: inline-block;
  font-size: 18px;
  font-family: "Open Sans",sans-serif;
  font-stretch: normal;
  font-style: normal;
  font-weight: bold;
  height: 46px;
  -webkit-letter-spacing: normal;
  -moz-letter-spacing: normal;
  -ms-letter-spacing: normal;
  letter-spacing: normal;
  padding: 5px 30px;
  text-align: center;
  width: auto;
  -webkit-transition: all .3s;
  transition: all .3s;
}

.c0:hover {
  background-color: #EBEBEB;
  border: 1px solid #EBEBEB;
  color: #4CB050;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c0:hover .sc-bwzfXH {
  fill: #4CB050;
}

.c0:disabled {
  background-color: transparent;
  border: 1px solid transparent;
  color: #BFBFBF;
  pointer-events: none;
}

.c0:disabled .sc-bwzfXH {
  fill: #BFBFBF;
}

.c0:focus {
  outline: none;
}

.c0 .sc-bwzfXH {
  fill: #4CB050;
  height: 36px;
  width: 36px;
}

<button
  className="c0"
  size="big"
  theme="flatGreen"
/>
`;

exports[`[SNAPSHOT][Componentes][Common][Button] - Boton con los siguientes temas: red, secondaryRed, flatRed, blue, flatBlue, green, flatGreen, yellow, flatYellow, gray, flatGray. Debe pintar el componente con el tema "flatRed" y los tamaños "small", "medium" y "big". 1`] = `
.c0 {
  background-color: transparent;
  border: 1px solid transparent;
  border-radius: 5px;
  box-sizing: border-box;
  color: #FF456A;
  cursor: pointer;
  display: inline-block;
  font-size: 14px;
  font-family: "Open Sans",sans-serif;
  font-stretch: normal;
  font-style: normal;
  font-weight: bold;
  height: 30px;
  -webkit-letter-spacing: normal;
  -moz-letter-spacing: normal;
  -ms-letter-spacing: normal;
  letter-spacing: normal;
  padding: 5px 30px;
  text-align: center;
  width: auto;
  -webkit-transition: all .3s;
  transition: all .3s;
}

.c0:hover {
  background-color: #EBEBEB;
  border: 1px solid #EBEBEB;
  color: #FF456A;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c0:hover .sc-bwzfXH {
  fill: #FF456A;
}

.c0:disabled {
  background-color: transparent;
  border: 1px solid transparent;
  color: #BFBFBF;
  pointer-events: none;
}

.c0:disabled .sc-bwzfXH {
  fill: #BFBFBF;
}

.c0:focus {
  outline: none;
}

.c0 .sc-bwzfXH {
  fill: #FF456A;
  height: 20px;
  width: 20px;
}

<button
  className="c0"
  size="small"
  theme="flatRed"
/>
`;

exports[`[SNAPSHOT][Componentes][Common][Button] - Boton con los siguientes temas: red, secondaryRed, flatRed, blue, flatBlue, green, flatGreen, yellow, flatYellow, gray, flatGray. Debe pintar el componente con el tema "flatRed" y los tamaños "small", "medium" y "big". 2`] = `
.c0 {
  background-color: transparent;
  border: 1px solid transparent;
  border-radius: 5px;
  box-sizing: border-box;
  color: #FF456A;
  cursor: pointer;
  display: inline-block;
  font-size: 16px;
  font-family: "Open Sans",sans-serif;
  font-stretch: normal;
  font-style: normal;
  font-weight: bold;
  height: 40px;
  -webkit-letter-spacing: normal;
  -moz-letter-spacing: normal;
  -ms-letter-spacing: normal;
  letter-spacing: normal;
  padding: 5px 30px;
  text-align: center;
  width: auto;
  -webkit-transition: all .3s;
  transition: all .3s;
}

.c0:hover {
  background-color: #EBEBEB;
  border: 1px solid #EBEBEB;
  color: #FF456A;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c0:hover .sc-bwzfXH {
  fill: #FF456A;
}

.c0:disabled {
  background-color: transparent;
  border: 1px solid transparent;
  color: #BFBFBF;
  pointer-events: none;
}

.c0:disabled .sc-bwzfXH {
  fill: #BFBFBF;
}

.c0:focus {
  outline: none;
}

.c0 .sc-bwzfXH {
  fill: #FF456A;
  height: 30px;
  width: 30px;
}

<button
  className="c0"
  size="medium"
  theme="flatRed"
/>
`;

exports[`[SNAPSHOT][Componentes][Common][Button] - Boton con los siguientes temas: red, secondaryRed, flatRed, blue, flatBlue, green, flatGreen, yellow, flatYellow, gray, flatGray. Debe pintar el componente con el tema "flatRed" y los tamaños "small", "medium" y "big". 3`] = `
.c0 {
  background-color: transparent;
  border: 1px solid transparent;
  border-radius: 5px;
  box-sizing: border-box;
  color: #FF456A;
  cursor: pointer;
  display: inline-block;
  font-size: 18px;
  font-family: "Open Sans",sans-serif;
  font-stretch: normal;
  font-style: normal;
  font-weight: bold;
  height: 46px;
  -webkit-letter-spacing: normal;
  -moz-letter-spacing: normal;
  -ms-letter-spacing: normal;
  letter-spacing: normal;
  padding: 5px 30px;
  text-align: center;
  width: auto;
  -webkit-transition: all .3s;
  transition: all .3s;
}

.c0:hover {
  background-color: #EBEBEB;
  border: 1px solid #EBEBEB;
  color: #FF456A;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c0:hover .sc-bwzfXH {
  fill: #FF456A;
}

.c0:disabled {
  background-color: transparent;
  border: 1px solid transparent;
  color: #BFBFBF;
  pointer-events: none;
}

.c0:disabled .sc-bwzfXH {
  fill: #BFBFBF;
}

.c0:focus {
  outline: none;
}

.c0 .sc-bwzfXH {
  fill: #FF456A;
  height: 36px;
  width: 36px;
}

<button
  className="c0"
  size="big"
  theme="flatRed"
/>
`;

exports[`[SNAPSHOT][Componentes][Common][Button] - Boton con los siguientes temas: red, secondaryRed, flatRed, blue, flatBlue, green, flatGreen, yellow, flatYellow, gray, flatGray. Debe pintar el componente con el tema "flatYellow" y los tamaños "small", "medium" y "big". 1`] = `
.c0 {
  background-color: transparent;
  border: 1px solid transparent;
  border-radius: 5px;
  box-sizing: border-box;
  color: #FFE200;
  cursor: pointer;
  display: inline-block;
  font-size: 14px;
  font-family: "Open Sans",sans-serif;
  font-stretch: normal;
  font-style: normal;
  font-weight: bold;
  height: 30px;
  -webkit-letter-spacing: normal;
  -moz-letter-spacing: normal;
  -ms-letter-spacing: normal;
  letter-spacing: normal;
  padding: 5px 30px;
  text-align: center;
  width: auto;
  -webkit-transition: all .3s;
  transition: all .3s;
}

.c0:hover {
  background-color: #EBEBEB;
  border: 1px solid #EBEBEB;
  color: #FFE200;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c0:hover .sc-bwzfXH {
  fill: #FFE200;
}

.c0:disabled {
  background-color: transparent;
  border: 1px solid transparent;
  color: #BFBFBF;
  pointer-events: none;
}

.c0:disabled .sc-bwzfXH {
  fill: #BFBFBF;
}

.c0:focus {
  outline: none;
}

.c0 .sc-bwzfXH {
  fill: #FFE200;
  height: 20px;
  width: 20px;
}

<button
  className="c0"
  size="small"
  theme="flatYellow"
/>
`;

exports[`[SNAPSHOT][Componentes][Common][Button] - Boton con los siguientes temas: red, secondaryRed, flatRed, blue, flatBlue, green, flatGreen, yellow, flatYellow, gray, flatGray. Debe pintar el componente con el tema "flatYellow" y los tamaños "small", "medium" y "big". 2`] = `
.c0 {
  background-color: transparent;
  border: 1px solid transparent;
  border-radius: 5px;
  box-sizing: border-box;
  color: #FFE200;
  cursor: pointer;
  display: inline-block;
  font-size: 16px;
  font-family: "Open Sans",sans-serif;
  font-stretch: normal;
  font-style: normal;
  font-weight: bold;
  height: 40px;
  -webkit-letter-spacing: normal;
  -moz-letter-spacing: normal;
  -ms-letter-spacing: normal;
  letter-spacing: normal;
  padding: 5px 30px;
  text-align: center;
  width: auto;
  -webkit-transition: all .3s;
  transition: all .3s;
}

.c0:hover {
  background-color: #EBEBEB;
  border: 1px solid #EBEBEB;
  color: #FFE200;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c0:hover .sc-bwzfXH {
  fill: #FFE200;
}

.c0:disabled {
  background-color: transparent;
  border: 1px solid transparent;
  color: #BFBFBF;
  pointer-events: none;
}

.c0:disabled .sc-bwzfXH {
  fill: #BFBFBF;
}

.c0:focus {
  outline: none;
}

.c0 .sc-bwzfXH {
  fill: #FFE200;
  height: 30px;
  width: 30px;
}

<button
  className="c0"
  size="medium"
  theme="flatYellow"
/>
`;

exports[`[SNAPSHOT][Componentes][Common][Button] - Boton con los siguientes temas: red, secondaryRed, flatRed, blue, flatBlue, green, flatGreen, yellow, flatYellow, gray, flatGray. Debe pintar el componente con el tema "flatYellow" y los tamaños "small", "medium" y "big". 3`] = `
.c0 {
  background-color: transparent;
  border: 1px solid transparent;
  border-radius: 5px;
  box-sizing: border-box;
  color: #FFE200;
  cursor: pointer;
  display: inline-block;
  font-size: 18px;
  font-family: "Open Sans",sans-serif;
  font-stretch: normal;
  font-style: normal;
  font-weight: bold;
  height: 46px;
  -webkit-letter-spacing: normal;
  -moz-letter-spacing: normal;
  -ms-letter-spacing: normal;
  letter-spacing: normal;
  padding: 5px 30px;
  text-align: center;
  width: auto;
  -webkit-transition: all .3s;
  transition: all .3s;
}

.c0:hover {
  background-color: #EBEBEB;
  border: 1px solid #EBEBEB;
  color: #FFE200;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c0:hover .sc-bwzfXH {
  fill: #FFE200;
}

.c0:disabled {
  background-color: transparent;
  border: 1px solid transparent;
  color: #BFBFBF;
  pointer-events: none;
}

.c0:disabled .sc-bwzfXH {
  fill: #BFBFBF;
}

.c0:focus {
  outline: none;
}

.c0 .sc-bwzfXH {
  fill: #FFE200;
  height: 36px;
  width: 36px;
}

<button
  className="c0"
  size="big"
  theme="flatYellow"
/>
`;

exports[`[SNAPSHOT][Componentes][Common][Button] - Boton con los siguientes temas: red, secondaryRed, flatRed, blue, flatBlue, green, flatGreen, yellow, flatYellow, gray, flatGray. Debe pintar el componente con el tema "gray" y los tamaños "small", "medium" y "big". 1`] = `
.c0 {
  background-color: #858585;
  border: 1px solid #858585;
  border-radius: 5px;
  box-sizing: border-box;
  color: #FFF;
  cursor: pointer;
  display: inline-block;
  font-size: 14px;
  font-family: "Open Sans",sans-serif;
  font-stretch: normal;
  font-style: normal;
  font-weight: bold;
  height: 30px;
  -webkit-letter-spacing: normal;
  -moz-letter-spacing: normal;
  -ms-letter-spacing: normal;
  letter-spacing: normal;
  padding: 5px 30px;
  text-align: center;
  width: auto;
  -webkit-transition: all .3s;
  transition: all .3s;
}

.c0:hover {
  background-color: #6A6A6A;
  border: 1px solid #6A6A6A;
  color: #FFF;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c0:hover .sc-bwzfXH {
  fill: #FFF;
}

.c0:disabled {
  background-color: #BFBFBF;
  border: 1px solid #BFBFBF;
  color: #FFF;
  pointer-events: none;
}

.c0:disabled .sc-bwzfXH {
  fill: #FFF;
}

.c0:focus {
  outline: none;
}

.c0 .sc-bwzfXH {
  fill: #FFF;
  height: 20px;
  width: 20px;
}

<button
  className="c0"
  size="small"
  theme="gray"
/>
`;

exports[`[SNAPSHOT][Componentes][Common][Button] - Boton con los siguientes temas: red, secondaryRed, flatRed, blue, flatBlue, green, flatGreen, yellow, flatYellow, gray, flatGray. Debe pintar el componente con el tema "gray" y los tamaños "small", "medium" y "big". 2`] = `
.c0 {
  background-color: #858585;
  border: 1px solid #858585;
  border-radius: 5px;
  box-sizing: border-box;
  color: #FFF;
  cursor: pointer;
  display: inline-block;
  font-size: 16px;
  font-family: "Open Sans",sans-serif;
  font-stretch: normal;
  font-style: normal;
  font-weight: bold;
  height: 40px;
  -webkit-letter-spacing: normal;
  -moz-letter-spacing: normal;
  -ms-letter-spacing: normal;
  letter-spacing: normal;
  padding: 5px 30px;
  text-align: center;
  width: auto;
  -webkit-transition: all .3s;
  transition: all .3s;
}

.c0:hover {
  background-color: #6A6A6A;
  border: 1px solid #6A6A6A;
  color: #FFF;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c0:hover .sc-bwzfXH {
  fill: #FFF;
}

.c0:disabled {
  background-color: #BFBFBF;
  border: 1px solid #BFBFBF;
  color: #FFF;
  pointer-events: none;
}

.c0:disabled .sc-bwzfXH {
  fill: #FFF;
}

.c0:focus {
  outline: none;
}

.c0 .sc-bwzfXH {
  fill: #FFF;
  height: 30px;
  width: 30px;
}

<button
  className="c0"
  size="medium"
  theme="gray"
/>
`;

exports[`[SNAPSHOT][Componentes][Common][Button] - Boton con los siguientes temas: red, secondaryRed, flatRed, blue, flatBlue, green, flatGreen, yellow, flatYellow, gray, flatGray. Debe pintar el componente con el tema "gray" y los tamaños "small", "medium" y "big". 3`] = `
.c0 {
  background-color: #858585;
  border: 1px solid #858585;
  border-radius: 5px;
  box-sizing: border-box;
  color: #FFF;
  cursor: pointer;
  display: inline-block;
  font-size: 18px;
  font-family: "Open Sans",sans-serif;
  font-stretch: normal;
  font-style: normal;
  font-weight: bold;
  height: 46px;
  -webkit-letter-spacing: normal;
  -moz-letter-spacing: normal;
  -ms-letter-spacing: normal;
  letter-spacing: normal;
  padding: 5px 30px;
  text-align: center;
  width: auto;
  -webkit-transition: all .3s;
  transition: all .3s;
}

.c0:hover {
  background-color: #6A6A6A;
  border: 1px solid #6A6A6A;
  color: #FFF;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c0:hover .sc-bwzfXH {
  fill: #FFF;
}

.c0:disabled {
  background-color: #BFBFBF;
  border: 1px solid #BFBFBF;
  color: #FFF;
  pointer-events: none;
}

.c0:disabled .sc-bwzfXH {
  fill: #FFF;
}

.c0:focus {
  outline: none;
}

.c0 .sc-bwzfXH {
  fill: #FFF;
  height: 36px;
  width: 36px;
}

<button
  className="c0"
  size="big"
  theme="gray"
/>
`;

exports[`[SNAPSHOT][Componentes][Common][Button] - Boton con los siguientes temas: red, secondaryRed, flatRed, blue, flatBlue, green, flatGreen, yellow, flatYellow, gray, flatGray. Debe pintar el componente con el tema "green" y los tamaños "small", "medium" y "big". 1`] = `
.c0 {
  background-color: #4CB050;
  border: 1px solid #4CB050;
  border-radius: 5px;
  box-sizing: border-box;
  color: #FFF;
  cursor: pointer;
  display: inline-block;
  font-size: 14px;
  font-family: "Open Sans",sans-serif;
  font-stretch: normal;
  font-style: normal;
  font-weight: bold;
  height: 30px;
  -webkit-letter-spacing: normal;
  -moz-letter-spacing: normal;
  -ms-letter-spacing: normal;
  letter-spacing: normal;
  padding: 5px 30px;
  text-align: center;
  width: auto;
  -webkit-transition: all .3s;
  transition: all .3s;
}

.c0:hover {
  background-color: #3C8C40;
  border: 1px solid #3C8C40;
  color: #FFF;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c0:hover .sc-bwzfXH {
  fill: #FFF;
}

.c0:disabled {
  background-color: #BFBFBF;
  border: 1px solid #BFBFBF;
  color: #FFF;
  pointer-events: none;
}

.c0:disabled .sc-bwzfXH {
  fill: #FFF;
}

.c0:focus {
  outline: none;
}

.c0 .sc-bwzfXH {
  fill: #FFF;
  height: 20px;
  width: 20px;
}

<button
  className="c0"
  size="small"
  theme="green"
/>
`;

exports[`[SNAPSHOT][Componentes][Common][Button] - Boton con los siguientes temas: red, secondaryRed, flatRed, blue, flatBlue, green, flatGreen, yellow, flatYellow, gray, flatGray. Debe pintar el componente con el tema "green" y los tamaños "small", "medium" y "big". 2`] = `
.c0 {
  background-color: #4CB050;
  border: 1px solid #4CB050;
  border-radius: 5px;
  box-sizing: border-box;
  color: #FFF;
  cursor: pointer;
  display: inline-block;
  font-size: 16px;
  font-family: "Open Sans",sans-serif;
  font-stretch: normal;
  font-style: normal;
  font-weight: bold;
  height: 40px;
  -webkit-letter-spacing: normal;
  -moz-letter-spacing: normal;
  -ms-letter-spacing: normal;
  letter-spacing: normal;
  padding: 5px 30px;
  text-align: center;
  width: auto;
  -webkit-transition: all .3s;
  transition: all .3s;
}

.c0:hover {
  background-color: #3C8C40;
  border: 1px solid #3C8C40;
  color: #FFF;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c0:hover .sc-bwzfXH {
  fill: #FFF;
}

.c0:disabled {
  background-color: #BFBFBF;
  border: 1px solid #BFBFBF;
  color: #FFF;
  pointer-events: none;
}

.c0:disabled .sc-bwzfXH {
  fill: #FFF;
}

.c0:focus {
  outline: none;
}

.c0 .sc-bwzfXH {
  fill: #FFF;
  height: 30px;
  width: 30px;
}

<button
  className="c0"
  size="medium"
  theme="green"
/>
`;

exports[`[SNAPSHOT][Componentes][Common][Button] - Boton con los siguientes temas: red, secondaryRed, flatRed, blue, flatBlue, green, flatGreen, yellow, flatYellow, gray, flatGray. Debe pintar el componente con el tema "green" y los tamaños "small", "medium" y "big". 3`] = `
.c0 {
  background-color: #4CB050;
  border: 1px solid #4CB050;
  border-radius: 5px;
  box-sizing: border-box;
  color: #FFF;
  cursor: pointer;
  display: inline-block;
  font-size: 18px;
  font-family: "Open Sans",sans-serif;
  font-stretch: normal;
  font-style: normal;
  font-weight: bold;
  height: 46px;
  -webkit-letter-spacing: normal;
  -moz-letter-spacing: normal;
  -ms-letter-spacing: normal;
  letter-spacing: normal;
  padding: 5px 30px;
  text-align: center;
  width: auto;
  -webkit-transition: all .3s;
  transition: all .3s;
}

.c0:hover {
  background-color: #3C8C40;
  border: 1px solid #3C8C40;
  color: #FFF;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c0:hover .sc-bwzfXH {
  fill: #FFF;
}

.c0:disabled {
  background-color: #BFBFBF;
  border: 1px solid #BFBFBF;
  color: #FFF;
  pointer-events: none;
}

.c0:disabled .sc-bwzfXH {
  fill: #FFF;
}

.c0:focus {
  outline: none;
}

.c0 .sc-bwzfXH {
  fill: #FFF;
  height: 36px;
  width: 36px;
}

<button
  className="c0"
  size="big"
  theme="green"
/>
`;

exports[`[SNAPSHOT][Componentes][Common][Button] - Boton con los siguientes temas: red, secondaryRed, flatRed, blue, flatBlue, green, flatGreen, yellow, flatYellow, gray, flatGray. Debe pintar el componente con el tema "red" con estilo para "float" y "width". 1`] = `
.c0 {
  background-color: #FF456A;
  border: 1px solid #FF456A;
  border-radius: 5px;
  box-sizing: border-box;
  color: #FFF;
  cursor: pointer;
  display: inline-block;
  font-size: 14px;
  font-family: "Open Sans",sans-serif;
  font-stretch: normal;
  font-style: normal;
  font-weight: bold;
  height: 30px;
  -webkit-letter-spacing: normal;
  -moz-letter-spacing: normal;
  -ms-letter-spacing: normal;
  letter-spacing: normal;
  padding: 5px 30px;
  text-align: center;
  width: auto;
  -webkit-transition: all .3s;
  transition: all .3s;
}

.c0:hover {
  background-color: #CC1F62;
  border: 1px solid #CC1F62;
  color: #FFF;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c0:hover .sc-bwzfXH {
  fill: #FFF;
}

.c0:disabled {
  background-color: #BFBFBF;
  border: 1px solid #BFBFBF;
  color: #FFF;
  pointer-events: none;
}

.c0:disabled .sc-bwzfXH {
  fill: #FFF;
}

.c0:focus {
  outline: none;
}

.c0 .sc-bwzfXH {
  fill: #FFF;
  height: 20px;
  width: 20px;
}

<button
  className="c0"
  size="small"
  style={
    Object {
      "float": "left",
      "width": "100%",
    }
  }
  theme="red"
/>
`;

exports[`[SNAPSHOT][Componentes][Common][Button] - Boton con los siguientes temas: red, secondaryRed, flatRed, blue, flatBlue, green, flatGreen, yellow, flatYellow, gray, flatGray. Debe pintar el componente con el tema "red" y los tamaños "small", "medium" y "big". 1`] = `
.c0 {
  background-color: #FF456A;
  border: 1px solid #FF456A;
  border-radius: 5px;
  box-sizing: border-box;
  color: #FFF;
  cursor: pointer;
  display: inline-block;
  font-size: 14px;
  font-family: "Open Sans",sans-serif;
  font-stretch: normal;
  font-style: normal;
  font-weight: bold;
  height: 30px;
  -webkit-letter-spacing: normal;
  -moz-letter-spacing: normal;
  -ms-letter-spacing: normal;
  letter-spacing: normal;
  padding: 5px 30px;
  text-align: center;
  width: auto;
  -webkit-transition: all .3s;
  transition: all .3s;
}

.c0:hover {
  background-color: #CC1F62;
  border: 1px solid #CC1F62;
  color: #FFF;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c0:hover .sc-bwzfXH {
  fill: #FFF;
}

.c0:disabled {
  background-color: #BFBFBF;
  border: 1px solid #BFBFBF;
  color: #FFF;
  pointer-events: none;
}

.c0:disabled .sc-bwzfXH {
  fill: #FFF;
}

.c0:focus {
  outline: none;
}

.c0 .sc-bwzfXH {
  fill: #FFF;
  height: 20px;
  width: 20px;
}

<button
  className="c0"
  size="small"
  theme="red"
/>
`;

exports[`[SNAPSHOT][Componentes][Common][Button] - Boton con los siguientes temas: red, secondaryRed, flatRed, blue, flatBlue, green, flatGreen, yellow, flatYellow, gray, flatGray. Debe pintar el componente con el tema "red" y los tamaños "small", "medium" y "big". 2`] = `
.c0 {
  background-color: #FF456A;
  border: 1px solid #FF456A;
  border-radius: 5px;
  box-sizing: border-box;
  color: #FFF;
  cursor: pointer;
  display: inline-block;
  font-size: 16px;
  font-family: "Open Sans",sans-serif;
  font-stretch: normal;
  font-style: normal;
  font-weight: bold;
  height: 40px;
  -webkit-letter-spacing: normal;
  -moz-letter-spacing: normal;
  -ms-letter-spacing: normal;
  letter-spacing: normal;
  padding: 5px 30px;
  text-align: center;
  width: auto;
  -webkit-transition: all .3s;
  transition: all .3s;
}

.c0:hover {
  background-color: #CC1F62;
  border: 1px solid #CC1F62;
  color: #FFF;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c0:hover .sc-bwzfXH {
  fill: #FFF;
}

.c0:disabled {
  background-color: #BFBFBF;
  border: 1px solid #BFBFBF;
  color: #FFF;
  pointer-events: none;
}

.c0:disabled .sc-bwzfXH {
  fill: #FFF;
}

.c0:focus {
  outline: none;
}

.c0 .sc-bwzfXH {
  fill: #FFF;
  height: 30px;
  width: 30px;
}

<button
  className="c0"
  size="medium"
  theme="red"
/>
`;

exports[`[SNAPSHOT][Componentes][Common][Button] - Boton con los siguientes temas: red, secondaryRed, flatRed, blue, flatBlue, green, flatGreen, yellow, flatYellow, gray, flatGray. Debe pintar el componente con el tema "red" y los tamaños "small", "medium" y "big". 3`] = `
.c0 {
  background-color: #FF456A;
  border: 1px solid #FF456A;
  border-radius: 5px;
  box-sizing: border-box;
  color: #FFF;
  cursor: pointer;
  display: inline-block;
  font-size: 18px;
  font-family: "Open Sans",sans-serif;
  font-stretch: normal;
  font-style: normal;
  font-weight: bold;
  height: 46px;
  -webkit-letter-spacing: normal;
  -moz-letter-spacing: normal;
  -ms-letter-spacing: normal;
  letter-spacing: normal;
  padding: 5px 30px;
  text-align: center;
  width: auto;
  -webkit-transition: all .3s;
  transition: all .3s;
}

.c0:hover {
  background-color: #CC1F62;
  border: 1px solid #CC1F62;
  color: #FFF;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c0:hover .sc-bwzfXH {
  fill: #FFF;
}

.c0:disabled {
  background-color: #BFBFBF;
  border: 1px solid #BFBFBF;
  color: #FFF;
  pointer-events: none;
}

.c0:disabled .sc-bwzfXH {
  fill: #FFF;
}

.c0:focus {
  outline: none;
}

.c0 .sc-bwzfXH {
  fill: #FFF;
  height: 36px;
  width: 36px;
}

<button
  className="c0"
  size="big"
  theme="red"
/>
`;

exports[`[SNAPSHOT][Componentes][Common][Button] - Boton con los siguientes temas: red, secondaryRed, flatRed, blue, flatBlue, green, flatGreen, yellow, flatYellow, gray, flatGray. Debe pintar el componente con el tema "secondaryRed" y los tamaños "small", "medium" y "big". 1`] = `
.c0 {
  background-color: #FFF;
  border: 1px solid #FF456A;
  border-radius: 5px;
  box-sizing: border-box;
  color: #FF456A;
  cursor: pointer;
  display: inline-block;
  font-size: 14px;
  font-family: "Open Sans",sans-serif;
  font-stretch: normal;
  font-style: normal;
  font-weight: bold;
  height: 30px;
  -webkit-letter-spacing: normal;
  -moz-letter-spacing: normal;
  -ms-letter-spacing: normal;
  letter-spacing: normal;
  padding: 5px 30px;
  text-align: center;
  width: auto;
  -webkit-transition: all .3s;
  transition: all .3s;
}

.c0:hover {
  background-color: #CC1F62;
  border: 1px solid #CC1F62;
  color: #FFF;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c0:hover .sc-bwzfXH {
  fill: #FFF;
}

.c0:disabled {
  background-color: #BFBFBF;
  border: 1px solid #BFBFBF;
  color: #FFF;
  pointer-events: none;
}

.c0:disabled .sc-bwzfXH {
  fill: #FFF;
}

.c0:focus {
  outline: none;
}

.c0 .sc-bwzfXH {
  fill: #FF456A;
  height: 20px;
  width: 20px;
}

<button
  className="c0"
  size="small"
  theme="secondaryRed"
/>
`;

exports[`[SNAPSHOT][Componentes][Common][Button] - Boton con los siguientes temas: red, secondaryRed, flatRed, blue, flatBlue, green, flatGreen, yellow, flatYellow, gray, flatGray. Debe pintar el componente con el tema "secondaryRed" y los tamaños "small", "medium" y "big". 2`] = `
.c0 {
  background-color: #FFF;
  border: 1px solid #FF456A;
  border-radius: 5px;
  box-sizing: border-box;
  color: #FF456A;
  cursor: pointer;
  display: inline-block;
  font-size: 16px;
  font-family: "Open Sans",sans-serif;
  font-stretch: normal;
  font-style: normal;
  font-weight: bold;
  height: 40px;
  -webkit-letter-spacing: normal;
  -moz-letter-spacing: normal;
  -ms-letter-spacing: normal;
  letter-spacing: normal;
  padding: 5px 30px;
  text-align: center;
  width: auto;
  -webkit-transition: all .3s;
  transition: all .3s;
}

.c0:hover {
  background-color: #CC1F62;
  border: 1px solid #CC1F62;
  color: #FFF;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c0:hover .sc-bwzfXH {
  fill: #FFF;
}

.c0:disabled {
  background-color: #BFBFBF;
  border: 1px solid #BFBFBF;
  color: #FFF;
  pointer-events: none;
}

.c0:disabled .sc-bwzfXH {
  fill: #FFF;
}

.c0:focus {
  outline: none;
}

.c0 .sc-bwzfXH {
  fill: #FF456A;
  height: 30px;
  width: 30px;
}

<button
  className="c0"
  size="medium"
  theme="secondaryRed"
/>
`;

exports[`[SNAPSHOT][Componentes][Common][Button] - Boton con los siguientes temas: red, secondaryRed, flatRed, blue, flatBlue, green, flatGreen, yellow, flatYellow, gray, flatGray. Debe pintar el componente con el tema "secondaryRed" y los tamaños "small", "medium" y "big". 3`] = `
.c0 {
  background-color: #FFF;
  border: 1px solid #FF456A;
  border-radius: 5px;
  box-sizing: border-box;
  color: #FF456A;
  cursor: pointer;
  display: inline-block;
  font-size: 18px;
  font-family: "Open Sans",sans-serif;
  font-stretch: normal;
  font-style: normal;
  font-weight: bold;
  height: 46px;
  -webkit-letter-spacing: normal;
  -moz-letter-spacing: normal;
  -ms-letter-spacing: normal;
  letter-spacing: normal;
  padding: 5px 30px;
  text-align: center;
  width: auto;
  -webkit-transition: all .3s;
  transition: all .3s;
}

.c0:hover {
  background-color: #CC1F62;
  border: 1px solid #CC1F62;
  color: #FFF;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c0:hover .sc-bwzfXH {
  fill: #FFF;
}

.c0:disabled {
  background-color: #BFBFBF;
  border: 1px solid #BFBFBF;
  color: #FFF;
  pointer-events: none;
}

.c0:disabled .sc-bwzfXH {
  fill: #FFF;
}

.c0:focus {
  outline: none;
}

.c0 .sc-bwzfXH {
  fill: #FF456A;
  height: 36px;
  width: 36px;
}

<button
  className="c0"
  size="big"
  theme="secondaryRed"
/>
`;

exports[`[SNAPSHOT][Componentes][Common][Button] - Boton con los siguientes temas: red, secondaryRed, flatRed, blue, flatBlue, green, flatGreen, yellow, flatYellow, gray, flatGray. Debe pintar el componente con el tema "yellow" y los tamaños "small", "medium" y "big". 1`] = `
.c0 {
  background-color: #FFE200;
  border: 1px solid #FFE200;
  border-radius: 5px;
  box-sizing: border-box;
  color: #FFF;
  cursor: pointer;
  display: inline-block;
  font-size: 14px;
  font-family: "Open Sans",sans-serif;
  font-stretch: normal;
  font-style: normal;
  font-weight: bold;
  height: 30px;
  -webkit-letter-spacing: normal;
  -moz-letter-spacing: normal;
  -ms-letter-spacing: normal;
  letter-spacing: normal;
  padding: 5px 30px;
  text-align: center;
  width: auto;
  -webkit-transition: all .3s;
  transition: all .3s;
}

.c0:hover {
  background-color: #CCB400;
  border: 1px solid #CCB400;
  color: #FFF;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c0:hover .sc-bwzfXH {
  fill: #FFF;
}

.c0:disabled {
  background-color: #BFBFBF;
  border: 1px solid #BFBFBF;
  color: #FFF;
  pointer-events: none;
}

.c0:disabled .sc-bwzfXH {
  fill: #FFF;
}

.c0:focus {
  outline: none;
}

.c0 .sc-bwzfXH {
  fill: #FFF;
  height: 20px;
  width: 20px;
}

<button
  className="c0"
  size="small"
  theme="yellow"
/>
`;

exports[`[SNAPSHOT][Componentes][Common][Button] - Boton con los siguientes temas: red, secondaryRed, flatRed, blue, flatBlue, green, flatGreen, yellow, flatYellow, gray, flatGray. Debe pintar el componente con el tema "yellow" y los tamaños "small", "medium" y "big". 2`] = `
.c0 {
  background-color: #FFE200;
  border: 1px solid #FFE200;
  border-radius: 5px;
  box-sizing: border-box;
  color: #FFF;
  cursor: pointer;
  display: inline-block;
  font-size: 16px;
  font-family: "Open Sans",sans-serif;
  font-stretch: normal;
  font-style: normal;
  font-weight: bold;
  height: 40px;
  -webkit-letter-spacing: normal;
  -moz-letter-spacing: normal;
  -ms-letter-spacing: normal;
  letter-spacing: normal;
  padding: 5px 30px;
  text-align: center;
  width: auto;
  -webkit-transition: all .3s;
  transition: all .3s;
}

.c0:hover {
  background-color: #CCB400;
  border: 1px solid #CCB400;
  color: #FFF;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c0:hover .sc-bwzfXH {
  fill: #FFF;
}

.c0:disabled {
  background-color: #BFBFBF;
  border: 1px solid #BFBFBF;
  color: #FFF;
  pointer-events: none;
}

.c0:disabled .sc-bwzfXH {
  fill: #FFF;
}

.c0:focus {
  outline: none;
}

.c0 .sc-bwzfXH {
  fill: #FFF;
  height: 30px;
  width: 30px;
}

<button
  className="c0"
  size="medium"
  theme="yellow"
/>
`;

exports[`[SNAPSHOT][Componentes][Common][Button] - Boton con los siguientes temas: red, secondaryRed, flatRed, blue, flatBlue, green, flatGreen, yellow, flatYellow, gray, flatGray. Debe pintar el componente con el tema "yellow" y los tamaños "small", "medium" y "big". 3`] = `
.c0 {
  background-color: #FFE200;
  border: 1px solid #FFE200;
  border-radius: 5px;
  box-sizing: border-box;
  color: #FFF;
  cursor: pointer;
  display: inline-block;
  font-size: 18px;
  font-family: "Open Sans",sans-serif;
  font-stretch: normal;
  font-style: normal;
  font-weight: bold;
  height: 46px;
  -webkit-letter-spacing: normal;
  -moz-letter-spacing: normal;
  -ms-letter-spacing: normal;
  letter-spacing: normal;
  padding: 5px 30px;
  text-align: center;
  width: auto;
  -webkit-transition: all .3s;
  transition: all .3s;
}

.c0:hover {
  background-color: #CCB400;
  border: 1px solid #CCB400;
  color: #FFF;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c0:hover .sc-bwzfXH {
  fill: #FFF;
}

.c0:disabled {
  background-color: #BFBFBF;
  border: 1px solid #BFBFBF;
  color: #FFF;
  pointer-events: none;
}

.c0:disabled .sc-bwzfXH {
  fill: #FFF;
}

.c0:focus {
  outline: none;
}

.c0 .sc-bwzfXH {
  fill: #FFF;
  height: 36px;
  width: 36px;
}

<button
  className="c0"
  size="big"
  theme="yellow"
/>
`;

exports[`[SNAPSHOT][Componentes][Common][IconButton] - Boton con los siguientes temas: red (usando un icono). Debe pintar el componente con el tema "red", tamaño "small" y con el icono "plus". 1`] = `
.c2 {
  display: inline-block;
  fill: #FFF;
  height: 50px;
  margin: 0px 5px 0px 0px;
  vertical-align: middle;
  width: 50px;
  -webkit-transition: all .3s;
  transition: all .3s;
}

.c0 {
  background-color: #FF456A;
  border: 1px solid #FF456A;
  border-radius: 5px;
  box-sizing: border-box;
  color: #FFF;
  cursor: pointer;
  display: inline-block;
  font-size: 14px;
  font-family: "Open Sans",sans-serif;
  font-stretch: normal;
  font-style: normal;
  font-weight: bold;
  height: 30px;
  -webkit-letter-spacing: normal;
  -moz-letter-spacing: normal;
  -ms-letter-spacing: normal;
  letter-spacing: normal;
  padding: 5px 30px;
  text-align: center;
  width: auto;
  -webkit-transition: all .3s;
  transition: all .3s;
}

.c0:hover {
  background-color: #CC1F62;
  border: 1px solid #CC1F62;
  color: #FFF;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c0:hover .c1 {
  fill: #FFF;
}

.c0:disabled {
  background-color: #BFBFBF;
  border: 1px solid #BFBFBF;
  color: #FFF;
  pointer-events: none;
}

.c0:disabled .c1 {
  fill: #FFF;
}

.c0:focus {
  outline: none;
}

.c0 .c1 {
  fill: #FFF;
  height: 20px;
  width: 20px;
}

.cTgdqQ:hover .c1 {
  fill: #FFF;
}

.cTgdqQ:disabled .c1 {
  fill: #FFF;
}

.cTgdqQ .c1 {
  fill: #FFF;
  height: 30px;
  width: 30px;
}

.ijQLFP:hover .c1 {
  fill: #FFF;
}

.ijQLFP:disabled .c1 {
  fill: #FFF;
}

.ijQLFP .c1 {
  fill: #FFF;
  height: 36px;
  width: 36px;
}

.cjjZue:hover .c1 {
  fill: #FFF;
}

.cjjZue:disabled .c1 {
  fill: #FFF;
}

.cjjZue .c1 {
  fill: #FF456A;
  height: 20px;
  width: 20px;
}

.bGLRkV:hover .c1 {
  fill: #FFF;
}

.bGLRkV:disabled .c1 {
  fill: #FFF;
}

.bGLRkV .c1 {
  fill: #FF456A;
  height: 30px;
  width: 30px;
}

.eAlJCb:hover .c1 {
  fill: #FFF;
}

.eAlJCb:disabled .c1 {
  fill: #FFF;
}

.eAlJCb .c1 {
  fill: #FF456A;
  height: 36px;
  width: 36px;
}

.dnvmEq:hover .c1 {
  fill: #FF456A;
}

.dnvmEq:disabled .c1 {
  fill: #BFBFBF;
}

.dnvmEq .c1 {
  fill: #FF456A;
  height: 20px;
  width: 20px;
}

.iCYNaX:hover .c1 {
  fill: #FF456A;
}

.iCYNaX:disabled .c1 {
  fill: #BFBFBF;
}

.iCYNaX .c1 {
  fill: #FF456A;
  height: 30px;
  width: 30px;
}

.ipQZUe:hover .c1 {
  fill: #FF456A;
}

.ipQZUe:disabled .c1 {
  fill: #BFBFBF;
}

.ipQZUe .c1 {
  fill: #FF456A;
  height: 36px;
  width: 36px;
}

.czgHnl:hover .c1 {
  fill: #FFF;
}

.czgHnl:disabled .c1 {
  fill: #FFF;
}

.czgHnl .c1 {
  fill: #FFF;
  height: 20px;
  width: 20px;
}

.ejrzjg:hover .c1 {
  fill: #FFF;
}

.ejrzjg:disabled .c1 {
  fill: #FFF;
}

.ejrzjg .c1 {
  fill: #FFF;
  height: 30px;
  width: 30px;
}

.ksApkw:hover .c1 {
  fill: #FFF;
}

.ksApkw:disabled .c1 {
  fill: #FFF;
}

.ksApkw .c1 {
  fill: #FFF;
  height: 36px;
  width: 36px;
}

.fEitnn:hover .c1 {
  fill: #1476FB;
}

.fEitnn:disabled .c1 {
  fill: #BFBFBF;
}

.fEitnn .c1 {
  fill: #1476FB;
  height: 20px;
  width: 20px;
}

.dRNcMB:hover .c1 {
  fill: #1476FB;
}

.dRNcMB:disabled .c1 {
  fill: #BFBFBF;
}

.dRNcMB .c1 {
  fill: #1476FB;
  height: 30px;
  width: 30px;
}

.JMGCk:hover .c1 {
  fill: #1476FB;
}

.JMGCk:disabled .c1 {
  fill: #BFBFBF;
}

.JMGCk .c1 {
  fill: #1476FB;
  height: 36px;
  width: 36px;
}

.jROQDH:hover .c1 {
  fill: #FFF;
}

.jROQDH:disabled .c1 {
  fill: #FFF;
}

.jROQDH .c1 {
  fill: #FFF;
  height: 20px;
  width: 20px;
}

.iZcNHe:hover .c1 {
  fill: #FFF;
}

.iZcNHe:disabled .c1 {
  fill: #FFF;
}

.iZcNHe .c1 {
  fill: #FFF;
  height: 30px;
  width: 30px;
}

.cVkxMP:hover .c1 {
  fill: #FFF;
}

.cVkxMP:disabled .c1 {
  fill: #FFF;
}

.cVkxMP .c1 {
  fill: #FFF;
  height: 36px;
  width: 36px;
}

.FXZQ:hover .c1 {
  fill: #4CB050;
}

.FXZQ:disabled .c1 {
  fill: #BFBFBF;
}

.FXZQ .c1 {
  fill: #4CB050;
  height: 20px;
  width: 20px;
}

.evmPJl:hover .c1 {
  fill: #4CB050;
}

.evmPJl:disabled .c1 {
  fill: #BFBFBF;
}

.evmPJl .c1 {
  fill: #4CB050;
  height: 30px;
  width: 30px;
}

.iPfhdY:hover .c1 {
  fill: #4CB050;
}

.iPfhdY:disabled .c1 {
  fill: #BFBFBF;
}

.iPfhdY .c1 {
  fill: #4CB050;
  height: 36px;
  width: 36px;
}

.jSswYV:hover .c1 {
  fill: #FFF;
}

.jSswYV:disabled .c1 {
  fill: #FFF;
}

.jSswYV .c1 {
  fill: #FFF;
  height: 20px;
  width: 20px;
}

.fHRQjD:hover .c1 {
  fill: #FFF;
}

.fHRQjD:disabled .c1 {
  fill: #FFF;
}

.fHRQjD .c1 {
  fill: #FFF;
  height: 30px;
  width: 30px;
}

.dliEmY:hover .c1 {
  fill: #FFF;
}

.dliEmY:disabled .c1 {
  fill: #FFF;
}

.dliEmY .c1 {
  fill: #FFF;
  height: 36px;
  width: 36px;
}

.iLXJPP:hover .c1 {
  fill: #FFE200;
}

.iLXJPP:disabled .c1 {
  fill: #BFBFBF;
}

.iLXJPP .c1 {
  fill: #FFE200;
  height: 20px;
  width: 20px;
}

.hSRgli:hover .c1 {
  fill: #FFE200;
}

.hSRgli:disabled .c1 {
  fill: #BFBFBF;
}

.hSRgli .c1 {
  fill: #FFE200;
  height: 30px;
  width: 30px;
}

.kMcisX:hover .c1 {
  fill: #FFE200;
}

.kMcisX:disabled .c1 {
  fill: #BFBFBF;
}

.kMcisX .c1 {
  fill: #FFE200;
  height: 36px;
  width: 36px;
}

.jXKnHS:hover .c1 {
  fill: #FFF;
}

.jXKnHS:disabled .c1 {
  fill: #FFF;
}

.jXKnHS .c1 {
  fill: #FFF;
  height: 20px;
  width: 20px;
}

.bbKrbp:hover .c1 {
  fill: #FFF;
}

.bbKrbp:disabled .c1 {
  fill: #FFF;
}

.bbKrbp .c1 {
  fill: #FFF;
  height: 30px;
  width: 30px;
}

.hNZCZB:hover .c1 {
  fill: #FFF;
}

.hNZCZB:disabled .c1 {
  fill: #FFF;
}

.hNZCZB .c1 {
  fill: #FFF;
  height: 36px;
  width: 36px;
}

.fgGbfJ:hover .c1 {
  fill: #858585;
}

.fgGbfJ:disabled .c1 {
  fill: #BFBFBF;
}

.fgGbfJ .c1 {
  fill: #858585;
  height: 20px;
  width: 20px;
}

.fvqlcj:hover .c1 {
  fill: #858585;
}

.fvqlcj:disabled .c1 {
  fill: #BFBFBF;
}

.fvqlcj .c1 {
  fill: #858585;
  height: 30px;
  width: 30px;
}

.bfnadQ:hover .c1 {
  fill: #858585;
}

.bfnadQ:disabled .c1 {
  fill: #BFBFBF;
}

.bfnadQ .c1 {
  fill: #858585;
  height: 36px;
  width: 36px;
}

<button
  className="c0"
  icon="plus"
  size="small"
  theme="red"
>
  <svg
    className="c1 c2"
    dangerouslySetInnerHTML={
      Object {
        "__html": "<g>
            <path d=\\"M409.133,109.203c-19.608-33.592-46.205-60.189-79.798-79.796C295.736,9.801,259.058,0,219.273,0
                c-39.781,0-76.47,9.801-110.063,29.407c-33.595,19.604-60.192,46.201-79.8,79.796C9.801,142.8,0,179.489,0,219.267
                c0,39.78,9.804,76.463,29.407,110.062c19.607,33.592,46.204,60.189,79.799,79.798c33.597,19.605,70.283,29.407,110.063,29.407
                s76.47-9.802,110.065-29.407c33.593-19.602,60.189-46.206,79.795-79.798c19.603-33.596,29.403-70.284,29.403-110.062
                C438.533,179.485,428.732,142.795,409.133,109.203z M347.179,237.539c0,4.948-1.811,9.236-5.428,12.847
                c-3.62,3.614-7.901,5.428-12.847,5.428h-73.091v73.084c0,4.948-1.813,9.232-5.428,12.854c-3.613,3.613-7.897,5.421-12.847,5.421
                h-36.543c-4.948,0-9.231-1.808-12.847-5.421c-3.617-3.621-5.426-7.905-5.426-12.854v-73.084h-73.089
                c-4.948,0-9.229-1.813-12.847-5.428c-3.616-3.61-5.424-7.898-5.424-12.847v-36.547c0-4.948,1.809-9.231,5.424-12.847
                c3.617-3.617,7.898-5.426,12.847-5.426h73.092v-73.089c0-4.949,1.809-9.229,5.426-12.847c3.616-3.616,7.898-5.424,12.847-5.424
                h36.547c4.948,0,9.233,1.809,12.847,5.424c3.614,3.617,5.428,7.898,5.428,12.847v73.089h73.084c4.948,0,9.232,1.809,12.847,5.426
                c3.617,3.615,5.428,7.898,5.428,12.847V237.539z\\"/>
        </g>",
      }
    }
    icon="plus"
    preserveAspectRatio="none"
    vectorEffect="non-scaling-stroke"
    viewBox="0 0 512.000 512.000"
    x="0px"
    y="0px"
  />
</button>
`;

exports[`[SNAPSHOT][Componentes][Common][RoundButton] - Boton con los siguientes temas: red (usando un icono). Debe pintar el componente con el tema "red", tamaño "small" y con el icono "plus". 1`] = `
.c3 {
  display: inline-block;
  fill: #FFF;
  height: 50px;
  margin: 0px;
  vertical-align: middle;
  width: 50px;
  -webkit-transition: all .3s;
  transition: all .3s;
}

.c1 {
  background-color: #FF456A;
  border: 1px solid #FF456A;
  border-radius: 5px;
  box-sizing: border-box;
  color: #FFF;
  cursor: pointer;
  display: inline-block;
  font-size: 14px;
  font-family: "Open Sans",sans-serif;
  font-stretch: normal;
  font-style: normal;
  font-weight: bold;
  height: 30px;
  -webkit-letter-spacing: normal;
  -moz-letter-spacing: normal;
  -ms-letter-spacing: normal;
  letter-spacing: normal;
  padding: 5px 30px;
  text-align: center;
  width: auto;
  -webkit-transition: all .3s;
  transition: all .3s;
}

.c1:hover {
  background-color: #CC1F62;
  border: 1px solid #CC1F62;
  color: #FFF;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c1:hover .c2 {
  fill: #FFF;
}

.c1:disabled {
  background-color: #BFBFBF;
  border: 1px solid #BFBFBF;
  color: #FFF;
  pointer-events: none;
}

.c1:disabled .c2 {
  fill: #FFF;
}

.c1:focus {
  outline: none;
}

.c1 .c2 {
  fill: #FFF;
  height: 20px;
  width: 20px;
}

.cTgdqQ:hover .c2 {
  fill: #FFF;
}

.cTgdqQ:disabled .c2 {
  fill: #FFF;
}

.cTgdqQ .c2 {
  fill: #FFF;
  height: 30px;
  width: 30px;
}

.ijQLFP:hover .c2 {
  fill: #FFF;
}

.ijQLFP:disabled .c2 {
  fill: #FFF;
}

.ijQLFP .c2 {
  fill: #FFF;
  height: 36px;
  width: 36px;
}

.cjjZue:hover .c2 {
  fill: #FFF;
}

.cjjZue:disabled .c2 {
  fill: #FFF;
}

.cjjZue .c2 {
  fill: #FF456A;
  height: 20px;
  width: 20px;
}

.bGLRkV:hover .c2 {
  fill: #FFF;
}

.bGLRkV:disabled .c2 {
  fill: #FFF;
}

.bGLRkV .c2 {
  fill: #FF456A;
  height: 30px;
  width: 30px;
}

.eAlJCb:hover .c2 {
  fill: #FFF;
}

.eAlJCb:disabled .c2 {
  fill: #FFF;
}

.eAlJCb .c2 {
  fill: #FF456A;
  height: 36px;
  width: 36px;
}

.dnvmEq:hover .c2 {
  fill: #FF456A;
}

.dnvmEq:disabled .c2 {
  fill: #BFBFBF;
}

.dnvmEq .c2 {
  fill: #FF456A;
  height: 20px;
  width: 20px;
}

.iCYNaX:hover .c2 {
  fill: #FF456A;
}

.iCYNaX:disabled .c2 {
  fill: #BFBFBF;
}

.iCYNaX .c2 {
  fill: #FF456A;
  height: 30px;
  width: 30px;
}

.ipQZUe:hover .c2 {
  fill: #FF456A;
}

.ipQZUe:disabled .c2 {
  fill: #BFBFBF;
}

.ipQZUe .c2 {
  fill: #FF456A;
  height: 36px;
  width: 36px;
}

.czgHnl:hover .c2 {
  fill: #FFF;
}

.czgHnl:disabled .c2 {
  fill: #FFF;
}

.czgHnl .c2 {
  fill: #FFF;
  height: 20px;
  width: 20px;
}

.ejrzjg:hover .c2 {
  fill: #FFF;
}

.ejrzjg:disabled .c2 {
  fill: #FFF;
}

.ejrzjg .c2 {
  fill: #FFF;
  height: 30px;
  width: 30px;
}

.ksApkw:hover .c2 {
  fill: #FFF;
}

.ksApkw:disabled .c2 {
  fill: #FFF;
}

.ksApkw .c2 {
  fill: #FFF;
  height: 36px;
  width: 36px;
}

.fEitnn:hover .c2 {
  fill: #1476FB;
}

.fEitnn:disabled .c2 {
  fill: #BFBFBF;
}

.fEitnn .c2 {
  fill: #1476FB;
  height: 20px;
  width: 20px;
}

.dRNcMB:hover .c2 {
  fill: #1476FB;
}

.dRNcMB:disabled .c2 {
  fill: #BFBFBF;
}

.dRNcMB .c2 {
  fill: #1476FB;
  height: 30px;
  width: 30px;
}

.JMGCk:hover .c2 {
  fill: #1476FB;
}

.JMGCk:disabled .c2 {
  fill: #BFBFBF;
}

.JMGCk .c2 {
  fill: #1476FB;
  height: 36px;
  width: 36px;
}

.jROQDH:hover .c2 {
  fill: #FFF;
}

.jROQDH:disabled .c2 {
  fill: #FFF;
}

.jROQDH .c2 {
  fill: #FFF;
  height: 20px;
  width: 20px;
}

.iZcNHe:hover .c2 {
  fill: #FFF;
}

.iZcNHe:disabled .c2 {
  fill: #FFF;
}

.iZcNHe .c2 {
  fill: #FFF;
  height: 30px;
  width: 30px;
}

.cVkxMP:hover .c2 {
  fill: #FFF;
}

.cVkxMP:disabled .c2 {
  fill: #FFF;
}

.cVkxMP .c2 {
  fill: #FFF;
  height: 36px;
  width: 36px;
}

.FXZQ:hover .c2 {
  fill: #4CB050;
}

.FXZQ:disabled .c2 {
  fill: #BFBFBF;
}

.FXZQ .c2 {
  fill: #4CB050;
  height: 20px;
  width: 20px;
}

.evmPJl:hover .c2 {
  fill: #4CB050;
}

.evmPJl:disabled .c2 {
  fill: #BFBFBF;
}

.evmPJl .c2 {
  fill: #4CB050;
  height: 30px;
  width: 30px;
}

.iPfhdY:hover .c2 {
  fill: #4CB050;
}

.iPfhdY:disabled .c2 {
  fill: #BFBFBF;
}

.iPfhdY .c2 {
  fill: #4CB050;
  height: 36px;
  width: 36px;
}

.jSswYV:hover .c2 {
  fill: #FFF;
}

.jSswYV:disabled .c2 {
  fill: #FFF;
}

.jSswYV .c2 {
  fill: #FFF;
  height: 20px;
  width: 20px;
}

.fHRQjD:hover .c2 {
  fill: #FFF;
}

.fHRQjD:disabled .c2 {
  fill: #FFF;
}

.fHRQjD .c2 {
  fill: #FFF;
  height: 30px;
  width: 30px;
}

.dliEmY:hover .c2 {
  fill: #FFF;
}

.dliEmY:disabled .c2 {
  fill: #FFF;
}

.dliEmY .c2 {
  fill: #FFF;
  height: 36px;
  width: 36px;
}

.iLXJPP:hover .c2 {
  fill: #FFE200;
}

.iLXJPP:disabled .c2 {
  fill: #BFBFBF;
}

.iLXJPP .c2 {
  fill: #FFE200;
  height: 20px;
  width: 20px;
}

.hSRgli:hover .c2 {
  fill: #FFE200;
}

.hSRgli:disabled .c2 {
  fill: #BFBFBF;
}

.hSRgli .c2 {
  fill: #FFE200;
  height: 30px;
  width: 30px;
}

.kMcisX:hover .c2 {
  fill: #FFE200;
}

.kMcisX:disabled .c2 {
  fill: #BFBFBF;
}

.kMcisX .c2 {
  fill: #FFE200;
  height: 36px;
  width: 36px;
}

.jXKnHS:hover .c2 {
  fill: #FFF;
}

.jXKnHS:disabled .c2 {
  fill: #FFF;
}

.jXKnHS .c2 {
  fill: #FFF;
  height: 20px;
  width: 20px;
}

.bbKrbp:hover .c2 {
  fill: #FFF;
}

.bbKrbp:disabled .c2 {
  fill: #FFF;
}

.bbKrbp .c2 {
  fill: #FFF;
  height: 30px;
  width: 30px;
}

.hNZCZB:hover .c2 {
  fill: #FFF;
}

.hNZCZB:disabled .c2 {
  fill: #FFF;
}

.hNZCZB .c2 {
  fill: #FFF;
  height: 36px;
  width: 36px;
}

.fgGbfJ:hover .c2 {
  fill: #858585;
}

.fgGbfJ:disabled .c2 {
  fill: #BFBFBF;
}

.fgGbfJ .c2 {
  fill: #858585;
  height: 20px;
  width: 20px;
}

.fvqlcj:hover .c2 {
  fill: #858585;
}

.fvqlcj:disabled .c2 {
  fill: #BFBFBF;
}

.fvqlcj .c2 {
  fill: #858585;
  height: 30px;
  width: 30px;
}

.bfnadQ:hover .c2 {
  fill: #858585;
}

.bfnadQ:disabled .c2 {
  fill: #BFBFBF;
}

.bfnadQ .c2 {
  fill: #858585;
  height: 36px;
  width: 36px;
}

.c0 {
  border-radius: 50%;
  padding: 0px;
  width: 30px;
}

<button
  className="c0 c1"
  icon="plus"
  size="small"
  theme="red"
>
  <svg
    className="c2 c3"
    dangerouslySetInnerHTML={
      Object {
        "__html": "<g>
            <path d=\\"M409.133,109.203c-19.608-33.592-46.205-60.189-79.798-79.796C295.736,9.801,259.058,0,219.273,0
                c-39.781,0-76.47,9.801-110.063,29.407c-33.595,19.604-60.192,46.201-79.8,79.796C9.801,142.8,0,179.489,0,219.267
                c0,39.78,9.804,76.463,29.407,110.062c19.607,33.592,46.204,60.189,79.799,79.798c33.597,19.605,70.283,29.407,110.063,29.407
                s76.47-9.802,110.065-29.407c33.593-19.602,60.189-46.206,79.795-79.798c19.603-33.596,29.403-70.284,29.403-110.062
                C438.533,179.485,428.732,142.795,409.133,109.203z M347.179,237.539c0,4.948-1.811,9.236-5.428,12.847
                c-3.62,3.614-7.901,5.428-12.847,5.428h-73.091v73.084c0,4.948-1.813,9.232-5.428,12.854c-3.613,3.613-7.897,5.421-12.847,5.421
                h-36.543c-4.948,0-9.231-1.808-12.847-5.421c-3.617-3.621-5.426-7.905-5.426-12.854v-73.084h-73.089
                c-4.948,0-9.229-1.813-12.847-5.428c-3.616-3.61-5.424-7.898-5.424-12.847v-36.547c0-4.948,1.809-9.231,5.424-12.847
                c3.617-3.617,7.898-5.426,12.847-5.426h73.092v-73.089c0-4.949,1.809-9.229,5.426-12.847c3.616-3.616,7.898-5.424,12.847-5.424
                h36.547c4.948,0,9.233,1.809,12.847,5.424c3.614,3.617,5.428,7.898,5.428,12.847v73.089h73.084c4.948,0,9.232,1.809,12.847,5.426
                c3.617,3.615,5.428,7.898,5.428,12.847V237.539z\\"/>
        </g>",
      }
    }
    icon="plus"
    preserveAspectRatio="none"
    vectorEffect="non-scaling-stroke"
    viewBox="0 0 512.000 512.000"
    x="0px"
    y="0px"
  />
</button>
`;
